restructured folders and some cleanup

--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
+    <script src="libraries/p5.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
   </head>
   <body>
-    <script src="utils.js"></script>
-    <script src="init.js"></script>
-    <script src="main.js"></script>
-    <script src="car.js"></script>
-    <script src="population.js"></script>
-    <script src="checkpointList.js"></script>
-    <script src="track.js"></script>
-    <script src="colliders.js"></script>
-    <script src="brain.js"></script>
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/init.js"></script>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/car.js"></script>
+    <script src="scripts/population.js"></script>
+    <script src="scripts/checkpointList.js"></script>
+    <script src="scripts/track.js"></script>
+    <script src="scripts/colliders.js"></script>
+    <script src="scripts/brain.js"></script>
     <script src="libraries/matrix.js"></script>
     <script src="libraries/nn.js"></script>
-    <script src="trackBuilder.js"></script>
-
-  
+    <script src="scripts/trackBuilder.js"></script>
 
 </body></html>
