--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html><html lang="en"><head>
     <script src="libraries/p5.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
   </head>
   <body>
+
+
+
+    <div id="USER_INTERFACE" style="float:left">
+      <div id="HUD">
+        <h3>HUD</h3>
+      </div>
+  
+      <div class="chartContainer" style="height: 200px; width: 400px;">
+        <h3>Generation stat</h3>
+        <canvas id="chart1"></canvas>
+        <canvas id="chart2"></canvas>
+        <canvas id="chart3"></canvas>
+      </div>
+    </div>
+
+    <div id="p5jsContainer" style="float:left">
+      <h2>Simulation</h2>
+    </div>
+
+
+    <script src="scripts/hud.js"></script>
     <script src="scripts/utils.js"></script>
     <script src="scripts/init.js"></script>
     <script src="scripts/main.js"></script>
@@ -17,5 +41,7 @@
     <script src="libraries/matrix.js"></script>
     <script src="libraries/nn.js"></script>
     <script src="scripts/trackBuilder.js"></script>
+    <script src="scripts/lineChart.js"></script>
+
 
 </body></html>
